--- a/client/src/styles/chatbot.css
+++ b/client/src/styles/chatbot.css
@@ -1,3 +1,13 @@
 .Chatbot {
+  position: absolute;
+  /* display: none; */
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  top: 20px;
+  right: 0;
+  width: 65%;
+  height: 100%;
+  background-color: #2e3137;
   border: 2px solid gold;
 }
