--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -7,7 +7,33 @@
   top: 20px;
   left: 0;
   width: 35%;
-  height: auto;
+  height: 100%;
   background-color: #2e3137;
   border: 2px solid gold;
+}
+
+.Sidebar .open-chats {
+  top: 0;
+  left: 20px;
+  border: 2px solid white;
+}
+
+.Sidebar .settings {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  bottom: 0;
+  border: 2px solid crimson;
+}
+
+.Sidebar .settings .bottom-left {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  border: 2px solid blue;
+}
+.Sidebar .settings .bottom-right {
+  border: 2px solid blue;
 }
