add structural styling

--- a/client/src/styles/chatbot.css
+++ b/client/src/styles/chatbot.css
@@ -4,7 +4,7 @@
   text-decoration: none;
   align-items: center;
   justify-content: center;
-  top: 20px;
+  top: 0;
   right: 0;
   width: 65%;
   height: 100%;
