--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,11 @@
-#root {
-  max-width: 1280px;
+:root {
+  max-width: 100vw;
+  max-height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
 .App {
-  display: flex;
+  /* display: flex; */
 }
