--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,16 @@
-:root {
+/* :root {
   max-width: 100vw;
   max-height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-}
+} */
 
 .App {
   /* display: flex; */
+  /* max-width: 100%;
+  max-height: 100%; */
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
