--- a/client/src/styles/chatbot.css
+++ b/client/src/styles/chatbot.css
@@ -1,13 +1,9 @@
 .Chatbot {
-  position: absolute;
   /* display: none; */
   text-decoration: none;
   align-items: center;
   justify-content: center;
-  top: 0;
-  right: 0;
-  width: 65%;
-  height: 100%;
+  top: 5%;
   background-color: #2e3137;
   border: 2px solid gold;
 }
