--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -1,5 +1,20 @@
 .Navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   width: 100%;
-  height: 5em;
+  height: 5%;
   border: 2px solid green;
+}
+
+.Navbar .logo {
+  height: 100%;
+  border: 2px solid gold;
+}
+
+.Navbar .links {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  border: 2px solid gold;
 }
