--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,19 @@
-/* :root {
-  max-width: 100vw;
-  max-height: 100vh;
-  margin: 0 auto;
-  text-align: center;
-} */
+*,
+body,
+html {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 .App {
-  /* display: flex; */
-  /* max-width: 100%;
-  max-height: 100%; */
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
+  max-width: 100vw;
+  max-height: 100vh;
   text-align: center;
+  border: 2px solid whitesmoke;
+}
+
+.App section {
+  display: flex;
+  flex-direction: row;
 }
