--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -3,6 +3,7 @@
   text-decoration: none;
   align-items: center;
   justify-content: center;
+  width: 35%;
   background-color: #2e3137;
   border: 2px solid gold;
 }
