--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,19 @@
-*,
-body,
-html {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-.App {
+body {
   max-width: 100vw;
   max-height: 100vh;
+}
+
+.App {
   text-align: center;
   border: 2px solid whitesmoke;
 }
 
 .App section {
   display: flex;
-  flex-direction: row;
 }
