--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -2,15 +2,26 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  overflow: hidden;
   border: 2px solid green;
 }
 
 .Navbar .logo {
+  margin-left: 2em;
   border: 2px solid gold;
 }
 
 .Navbar .links {
   display: flex;
   flex-direction: row;
+  width: auto;
+  margin: 0 2em 0 2em;
+  text-align: center;
+  text-decoration: none;
   border: 2px solid gold;
+}
+
+.Navbar .links .link {
+  text-decoration: none;
+  border: 2px solid green;
 }
