--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 5em;
+  /* height: 5em; */
   border: 2px solid crimson;
 }
 
