--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,14 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
-  max-width: 100vw;
-  max-height: 100vh;
+  box-sizing: border-box;
 }
 
 .App {
   text-align: center;
   border: 2px solid whitesmoke;
+  /* min-height: 100vh;
+  min-width: 100vw; */
 }
 
 .App section {
