--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -1,10 +1,22 @@
 .Navbar {
+  position: fixed;
+  left: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
   overflow: hidden;
+  z-index: 10;
   border: 2px solid green;
 }
+
+/* .Navbar {
+  position: fixed;
+  left: 0;
+  z-index: 50;
+  background-color: purple;
+  border: 2px solid green;
+} */
 
 .Navbar .logo {
   margin-left: 2em;
