--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -1,11 +1,7 @@
 .Sidebar {
-  /* display: none; */
-  text-decoration: none;
-  align-items: center;
-  justify-content: center;
   width: 35%;
-  background-color: #2e3137;
-  border: 2px solid gold;
+  height: 100vh;
+  border: 2px solid crimson;
 }
 
 .Sidebar .open-chats {
@@ -13,19 +9,27 @@
 }
 
 .Sidebar .settings {
+  position: absolute;
+  bottom: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* height: 5em; */
   border: 2px solid crimson;
 }
 
 .Sidebar .settings .bottom-left {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   border: 2px solid blue;
 }
+.Sidebar .settings .bottom-left .option {
+  border: 2px solid gold;
+}
+
 .Sidebar .settings .bottom-right {
   border: 2px solid blue;
+}
+.Sidebar .settings .bottom-right .hamburger {
+  border: 2px solid gold;
 }
