add structural styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,8 @@
 .App {
   text-align: center;
   border: 2px solid whitesmoke;
+  /* max-width: 100vw;
+  max-height: 100vh; */
   /* min-height: 100vh;
   min-width: 100vw; */
 }
