--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -5,7 +5,23 @@
 }
 
 .Sidebar .open-chats {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   border: 2px solid white;
+}
+
+.Sidebar .open-chats .chat {
+  width: 50%;
+  height: 10%;
+  border: 2px solid green;
+}
+
+.Sidebar .open-chats .chat:hover {
+  cursor: pointer;
+  background-color: green;
 }
 
 .Sidebar .settings {
@@ -14,6 +30,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 35%;
   border: 2px solid crimson;
 }
 
