--- a/client/src/styles/chatbot.css
+++ b/client/src/styles/chatbot.css
@@ -49,3 +49,20 @@
   margin-top: 2em;
   /* border: 2px solid gold; */
 }
+
+.Chatbot .settings {
+  position: absolute;
+  bottom: 4em;
+  width: 25.25rem;
+  height: 5rem;
+  z-index: 100;
+  border: 2px solid gold;
+}
+
+.Chatbot .author {
+  position: absolute;
+  bottom: 0;
+  margin-top: 1em;
+  padding: 1em;
+  border: 2px solid gold;
+}
