--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -27,13 +27,14 @@
   display: flex;
   flex-direction: row;
   width: auto;
-  margin: 0 2em 0 2em;
+  /* margin: 0 2em 0 2em; */
   text-align: center;
   text-decoration: none;
   border: 2px solid gold;
 }
 
 .Navbar .links .link {
+  margin: 0 1em 0 1em;
   text-decoration: none;
   border: 2px solid green;
 }
