--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -19,6 +19,7 @@
 } */
 
 .Navbar .logo {
+  align-self: center;
   margin-left: 2em;
   border: 2px solid gold;
 }
@@ -38,11 +39,16 @@
 } */
 
 .Navbar .links .link {
-  margin: 0 1em 0 1em;
-  padding: 1em;
-  font-size: 1em;
+  margin: 0 0.25em 0 0.25em;
+  padding: 0.5em;
+  font-size: 1.5em;
   text-align: center;
   text-decoration: none;
   color: #fff;
   border: 2px solid green;
+}
+
+.Navbar .links .link:hover {
+  cursor: pointer;
+  background-color: gold;
 }
