--- a/client/src/styles/chatbot.css
+++ b/client/src/styles/chatbot.css
@@ -34,7 +34,7 @@
 .Chatbot textarea {
   position: relative;
   top: 1em;
-  width: 25.25rem;
+  width: 25rem;
   height: 5rem;
   padding: 0.5em;
   resize: none;
@@ -70,4 +70,26 @@
   margin-top: 1em;
   padding: 1em;
   border: 2px solid gold;
+}
+
+/* Mobile first queries */
+
+/* Larger than mobile */
+@media (min-width: 400px) {
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+}
+
+/* Larger than tablet */
+@media (min-width: 750px) {
+}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {
 }
