--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -1,6 +1,7 @@
 .Sidebar {
   width: 35%;
   height: 100vh;
+  transition: 0.3s ease-in-out;
   border: 2px solid crimson;
 }
 
@@ -38,15 +39,67 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   border: 2px solid blue;
 }
 .Sidebar .settings .bottom-left .option {
+  margin: 0 0.25em 0 0.25em;
+  font-size: 1em;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
   border: 2px solid gold;
+}
+.Sidebar .settings .bottom-left .option:hover {
+  cursor: pointer;
+  color: gold;
 }
 
 .Sidebar .settings .bottom-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 2px solid blue;
 }
 .Sidebar .settings .bottom-right .hamburger {
+  position: relative;
+  margin: 0 0.25em 0 0.25em;
+  padding: 0.25em;
+  font-size: 1.25em;
+  text-decoration: none;
+  color: #fff;
   border: 2px solid gold;
+}
+.Sidebar .settings .bottom-right .hamburger:hover {
+  cursor: pointer;
+  color: gold;
+}
+
+.hamburger-menu {
+  margin-top: 4.5em;
+  width: 35%;
+  transition: 0.3s ease-in-out;
+  opacity: 1;
+  z-index: 100;
+  /* background: rgba(150, 250, 500, 10); */
+}
+.hamburger-menu .top .close-btn {
+  position: relative;
+  float: right;
+  top: 0.5em;
+  right: 0.5em;
+  font-size: 1.5em;
+  text-decoration: none;
+  color: crimson;
+}
+.hamburger-menu .top .close-btn:hover {
+  cursor: pointer;
+  color: gold;
+}
+.hamburger-menu h1 {
+  top: 10%;
+  max-width: 100%;
+  font-size: 2em;
+  font-stretch: expanded;
+  border: 2px solid green;
 }
