--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -59,16 +59,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 .Sidebar .settings .bottom-right .hamburger {
   position: relative;
+  width: 2em;
   margin: 0 0.25em 0 0.25em;
   padding: 0.25em;
   font-size: 1.25em;
   text-decoration: none;
-  color: #fff;
-  border: 2px solid gold;
+  /* color: #fff;
+  border: 2px solid gold; */
+  background: blue;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+  transform: scale(1);
+  animation: pulse 2s infinite;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
 .Sidebar .settings .bottom-right .hamburger:hover {
   cursor: pointer;
